# B2A

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
docs/plans/: 2026-03-02-bilibili-cli-implementation.md  2026-03-02-bilibili-hybrid-extractor-design.md
src/: cli.py  mcp_server.py
src/audio/: __init__.py  extractor.py
src/core/: api.py  asr.py
src/utils/: __init__.py  config.py  logger.py  subprocess_worker.py  url_parser.py  workspace.py
src/visual/: extractor.py
tests/: test_api.py  test_asr.py  test_audio_extractor.py  test_cli.py  test_config.py  test_extractor.py  test_url_parser.py  test_workspace.py
