[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "b2a777"
version = "0.5.6"
description = "B2A (Bilibili to Agents) — 让 AI Agent 能观看和倾听B站视频的多模态 MCP 插件"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "fanzhongli"}]
requires-python = ">=3.10"
keywords = ["bilibili", "agent", "ai", "subtitle", "asr", "video", "multimodal", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "httpx>=0.25.0",
    "yt-dlp>=2024.0.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "build>=1.0.0",
    "twine>=5.0.0"
]

[project.scripts]
b2a = "src.cli:main"
b2a-mcp = "src.mcp_server:main"

[project.urls]
Homepage = "https://github.com/e8b298/B2A"
Repository = "https://github.com/e8b298/B2A.git"
Bug-Tracker = "https://github.com/e8b298/B2A/issues"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
